fix(ui): funel with ufilters collapsed state

--- a/source/commons/Layout/styles.m.css
+++ b/source/commons/Layout/styles.m.css
@@ -30,10 +30,6 @@
     z-index: 100;
 }
 
-.testStyles {
-    background: tomato;
-}
-
 .pure {
     margin: 0 0 24px 0;
 }
